<resources>
    <!--General-->
    <string name="app_name">HydrateNow</string>
    <!--Drawer menu-->
    <string name="menu_open">Open menu</string>
    <string name="menu_close">Close menu</string>
    <string name="home">Home</string>
    <!--ForgotPswd activity-->
    <string name="forgot_password">Forgot password</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="recover">Recover</string>
    <string name="recovery_e_mail_has_been_send">Recovery e-mail has been send!</string>
    <string name="recovery_failed">Recovery failed!</string>
    <string name="please_enter_an_e_mail">Please, enter an e-mail!</string>
    <string name="please_enter_a_valid_e_mail">Please, enter a valid e-mail!</string>
    <!--Launch activity-->
    <string name="stay_hydrated">Stay hydrated!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <!--Login activity-->
    <string name="password">Password</string>
    <string name="login_successful">Login successful!</string>
    <string name="login_failed">Login failed!</string>
    <string name="please_enter_a_valid_password">Please, enter a valid password!</string>
    <!--main activity-->
    <string name="drink_water">Drink water</string>
    <!--Register activity-->
    <string name="create_account">Create account</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="registration_failed">Registration failed!</string>
    <string name="registration_successful">Registration successful!</string>
    <string name="please_enter_a_valid_username">Please, enter a valid username!</string>
    <string name="the_password_need_to_be_at_least_8_characters_long">The password need to be at least 8 characters long!</string>
    <string name="both_passwords_need_to_match">Both passwords need to match!</string>
    <!--Notifications-->
    <string name="don_t_forget_to_drink_water_you_have_currently_drunk">Don\'t forget to drink water! You have currently drunk</string>
    <string name="your_water_amount_has_been_reset">Your water amount has been reset!</string>
    <string name="initialized_your_water_tracking_you_have_currently_drunk_2f">Initialized your water tracking! You have currently drunk %.2f</string>
    <string name="logout">Log out</string>
    <string name="daily_overview">Daily overview</string>


</resources>